Fix notifications z-index

--- a/app/assets/stylesheets/notifications.sass
+++ b/app/assets/stylesheets/notifications.sass
@@ -2,3 +2,4 @@
   position: fixed
   bottom: 0px
   left: 10px
+  z-index: calc(#{$zindex-modal-backdrop} - 5)
